--- a/Physics/Physics/Views/TheoryPage.xaml
+++ b/Physics/Physics/Views/TheoryPage.xaml
@@ -3,10 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Physics.Views.TheoryPage" Title="Теория">
     <ContentPage.Content>
-        <StackLayout Background="#00836e">
-            <Picker x:Name="SectionPicker" Title="Выберите раздел" ItemDisplayBinding="{Binding TitleChapter}" TextColor="Black" Background="DarkSeaGreen" SelectedIndexChanged="SectionPicker_SelectedIndexChanged"/>
-            <Picker x:Name="ChapterPicker" Title="Выберите главу" TextColor="Black" ItemDisplayBinding="{Binding TitleChapter}" SelectedIndexChanged="ChapterPicker_SelectedIndexChanged"/>
-            <Picker x:Name="ParagraphPicker" Title="Выберите параграф" ItemDisplayBinding="{Binding TitleChapter}" TextColor="Black" SelectedIndexChanged="ParagraphPicker_SelectedIndexChanged"></Picker>
+        <StackLayout Background="#00836e" Padding="5">
+            <Picker x:Name="SectionPicker" Title="Выберите раздел" TextColor="White" ItemDisplayBinding="{Binding TitleChapter}" SelectedIndexChanged="SectionPicker_SelectedIndexChanged"/>
+            <Picker x:Name="ChapterPicker" Title="Выберите главу" TextColor="White" ItemDisplayBinding="{Binding TitleChapter}" SelectedIndexChanged="ChapterPicker_SelectedIndexChanged"/>
+            <Picker x:Name="ParagraphPicker" Title="Выберите параграф" TextColor="White" ItemDisplayBinding="{Binding TitleChapter}" SelectedIndexChanged="ParagraphPicker_SelectedIndexChanged"></Picker>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
