--- a/Physics/Physics/Views/FormulasPage.xaml
+++ b/Physics/Physics/Views/FormulasPage.xaml
@@ -5,11 +5,13 @@
              Title="Формулы">
     <ContentPage.Content>
         <StackLayout>
+            <ScrollView>
             <ListView x:Name="FormulasListView" BackgroundColor="#00836e" RowHeight="100" SeparatorColor="DeepSkyBlue" IsEnabled="False">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <ContentView >
+                            <ContentView>
+                                
                                 <Grid VerticalOptions="CenterAndExpand">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="3*"/>
@@ -18,12 +20,14 @@
                                     <Label Text="{Binding TitleFormula}" TextColor="White" VerticalOptions="StartAndExpand" FontSize="18" Padding="15,5,0,0"/>
                                     <Image Grid.Row="1" Source="{Binding PhotoFormulaPath}" VerticalOptions="StartAndExpand" WidthRequest="80" HeightRequest="80" HorizontalOptions="CenterAndExpand"/>
                                 </Grid>
+                                
                             </ContentView>
 
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
+            </ScrollView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
